@startuml

title __UI's Class Diagram__\n

  package com.alestrio.isotope {
    package com.alestrio.isotope.ui {
      class GuiLauncher {
          {static} + main()
          + start()
      }
    }
  }
  

  abstract class Parameters {
      + Parameters()
      {abstract} + getRaw()
      {abstract} + getUnnamed()
      {abstract} + getNamed()
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.ui {
      class GuiMP {
          - mainContainer : BorderPane
          + launch()
          + start()
      }
    }
  }
  

  abstract class Parameters {
      + Parameters()
      {abstract} + getRaw()
      {abstract} + getUnnamed()
      {abstract} + getNamed()
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.ui {
      class GuiV {
          + launch()
          + start()
      }
    }
  }
  

  abstract class Parameters {
      + Parameters()
      {abstract} + getRaw()
      {abstract} + getUnnamed()
      {abstract} + getNamed()
  }
  

  GuiLauncher -up-|> Application
  GuiLauncher +-down- Parameters
  GuiMP -up-|> Application
  GuiMP +-down- Parameters
  GuiV -up-|> Application
  GuiV +-down- Parameters


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
